Updates based on Phil's comments, a few other fixes

--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -460,3 +460,15 @@
   publisher = {Ieee},
   timestamp = {2014.12.08},
 }
+@MISC{Bosch1991,
+  author = {Bosch, R.},
+  title = {{CAN} specification version 2.0},
+  month = sep,
+  year = {1991},
+  __markedentry = {[akane:]},
+  citeulike-article-id = {968922},
+  keywords = {specification},
+  posted-at = {2006-11-30 16:23:42},
+  priority = {0},
+  timestamp = {2012.12.03}
+}
