--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -4,7 +4,7 @@
 % Aaron Kane
 
 %\documentclass[]{Z:/Private/research/TeX/llncs/llncs}
-\documentclass[]{./llncs}
+\documentclass[]{llncs}
 \pdfmapfile{+ltlfonts.map}
 
 %\documentclass[]{C:/Users/akane/Documents/Research/TeX/llncs/llncs}
