Fixed abstract back to original update (got clobbered by merge)

--- a/rv2015/rv2015_main.tex
+++ b/rv2015/rv2015_main.tex
@@ -82,9 +82,9 @@
 
 \begin{abstract}
 
-Although runtime monitoring (RM) is a promising technique to improve the verification of complex safety-critical systems, 
+Although runtime monitoring is a promising technique to improve the verification of complex safety-critical systems, 
 the general design trend towards utilizing black-box commercial-off-the-shelf (COTS) components means that these systems 
-are not always amenable to instrumentation which is commonly used in RM to produce the relevant events necessary for checking 
+are not always amenable to instrumentation which is commonly used to produce the relevant events necessary for checking 
 the desired properties. In this paper, we develop an online, real-time monitoring approach that targets an autonomous research 
 vehicle (ARV) system and recount our experience with it. To avoid instrumentation we passively monitor the target system by 
 generating high-level property constructs (\ie, propositions) from the observed network state. 
