Added tech report citation

--- a/rv2015/MergedBib.bib
+++ b/rv2015/MergedBib.bib
@@ -5764,6 +5764,16 @@
   url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4222736}
 }
 
+@TECHREPORT{Kane2015,
+  author = {Kane, Aaron and Chowdhury, Omar and Koopman, Philip and Datta, An},
+  title = {A Case Study on Runtime Monitoring of an Autonomous Research Vehicle
+	(ARV) System},
+  institution = {Carnegie Mellon University},
+  year = {2015},
+  owner = {akane},
+  timestamp = {2015.04.26}
+}
+
 @INPROCEEDINGS{Kane2014,
   author = {Kane, A. and Fuhrman, T. and Koopman, P.},
   title = {Monitor Based Oracles for Cyber-Physical System Testing: Practical
