--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -472,3 +472,12 @@
   priority = {0},
   timestamp = {2012.12.03}
 }
+@TECHREPORT{Kane2015,
+  author = {Kane, Aaron and Chowdhury, Omar and Koopman, Philip and Datta, An},
+  title = {A Case Study on Runtime Monitoring of an Autonomous Research Vehicle
+	(ARV) System},
+  institution = {Carnegie Mellon University},
+  year = {2015},
+  owner = {akane},
+  timestamp = {2015.04.26}
+}
