Moving figures around, added MTL citation

--- a/rv2015/rv2015_bibtex.bib
+++ b/rv2015/rv2015_bibtex.bib
@@ -433,3 +433,20 @@
   owner = {akane},
   timestamp = {2015.04.26}
 }
+@INCOLLECTION{Basin2012,
+  author = {Basin, David and Klaedtke, Felix and Zalinescu, Eugen},
+  title = {Algorithms for Monitoring Real-Time Properties},
+  booktitle = {Runtime Verification},
+  publisher = {Springer Berlin Heidelberg},
+  year = {2012},
+  //editor = {Khurshid, Sarfraz and Sen, Koushik},
+  volume = {7186},
+  series = {Lecture Notes in Computer Science},
+  pages = {260-275},
+  __markedentry = {[akane:]},
+  doi = {10.1007/978-3-642-29860-8_20},
+  file = {Basin2012.pdf:mPapers\\Basin2012.pdf:PDF},
+  isbn = {978-3-642-29859-2},
+  timestamp = {2013.09.03},
+  url = {http://dx.doi.org/10.1007/978-3-642-29860-8_20}
+}
