--- a/rv2015/sections/Algorithm.tex
+++ b/rv2015/sections/Algorithm.tex
@@ -10,7 +10,7 @@ For
 monitoring our desired ARV system so that it adheres to its specification, 
 %distributed embedded systems 
 we need an algorithm which %can %continuously 
-incrementally checks explicit time specifications (\ie, propositional metric-time temporal logic~\cite{MTL}) over finite system traces. 
+incrementally checks explicit time specifications (\ie, propositional metric-time temporal logic~\cite{Koymans1990}) over finite system traces. 
 This has led to our algorithm \monitor which is an iterative monitoring algorithm based on formula rewriting and summarizing the relevant history of the trace 
 in \emph{history-structures}. To detect violations early, \monitor, eagerly checks whether it can reduce subformulas of the original formula to boolean value 
 %either true/false 
